# FindProblems

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: __main__.py  config.py  setups.py  wsgi.py
src/api/: __init__.py  problem.py
src/app/: exceptions.py  reader.py  repository.py  service.py
src/domain/: problem.py
src/infra/: hasher.py  mongo.py  reader.py  repository.py
