[tool.poetry]
name = "findproblems"
version = "0.1.0"
description = ""
readme = "README.md"

authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
flask = ">=3.1.1,<4.0.0"
flask-restful = ">=0.3.10,<0.4.0"
pymongo = ">=4.13.2,<5.0.0"
gunicorn = ">=23.0.0,<24.0.0"
python-dotenv = ">=1.1.1,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"